--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query-builder-website",
+  "name": "ts-nestjs-angular-template",
   "private": true,
   "version": "1.0.0",
   "description": "Fullstack TypeScript, NestJS, Angular7+ project.",
