--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
         "pg": "latest",
+        "sqlstring": "^2.3.1",
         "swagger-ui-express": "latest",
         "ts-node": "^8.0.3",
         "tsconfig-paths": "latest",
@@ -54,6 +55,7 @@
         "@types/morgan": "^1.7.35",
         "@types/passport-jwt": "^3.0.1",
         "@types/pg": "latest",
+        "@types/sqlstring": "^2.2.1",
         "@types/supertest": "latest",
         "jest": "latest",
         "madge": "^3.4.4",
