--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,11 +28,14 @@
     "@covalent/highlight": "^2.0.1",
     "@covalent/markdown": "^2.0.1",
     "@covalent/text-editor": "^2.0.0",
+    "@fortawesome/fontawesome-free": "~5.6.3",
     "@ngxs/form-plugin": "^3.4.3",
     "@ngxs/logger-plugin": "^3.4.3",
     "@ngxs/router-plugin": "^3.4.3",
     "@ngxs/storage-plugin": "^3.4.3",
     "@ngxs/store": "^3.4.3",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^7.5.3",
     "angular-markdown-editor": "^2.0.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
@@ -40,13 +43,14 @@
     "apollo-client": "^2.4.0",
     "apollo-link": "^1.2.0",
     "bootstrap-markdown": "^2.10.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.6.5",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "immer": "^3.1.1",
     "marked": "^0.6.2",
-    "ngx-clipboard": "^12.0.0",
+    "ngx-clipboard": "^12.1.0",
     "ngx-markdown": "^7.1.5",
     "ngx-uploadcare-widget": "^1.2.3",
     "normalize.css": "^8.0.1",
@@ -72,7 +76,8 @@
     "karma-jasmine": "latest",
     "karma-jasmine-html-reporter": "latest",
     "madge": "^3.4.4",
+    "npm-registry-client": "^8.6.0",
     "protractor": "latest",
-    "typescript": "^3.2.4"
+    "typescript": "^3.4.5"
   }
 }
