--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,14 @@
   "dependencies": {
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "latest",
-    "@angular/compiler": "latest",
-    "@angular/core": "latest",
-    "@angular/forms": "latest",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "latest",
-    "@angular/platform-browser-dynamic": "latest",
-    "@angular/router": "latest",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
     "@covalent/core": "^2.0.1",
     "@covalent/flavored-markdown": "^2.0.1",
     "@covalent/highlight": "^2.0.1",
@@ -59,10 +59,10 @@
     "zone.js": "latest"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "latest",
-    "@angular/cli": "latest",
-    "@angular/compiler-cli": "latest",
-    "@angular/language-service": "latest",
+    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@ngxs/devtools-plugin": "^3.3.4",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "latest",
@@ -78,6 +78,6 @@
     "madge": "^3.4.4",
     "npm-registry-client": "^8.6.0",
     "protractor": "latest",
-    "typescript": "^3.4.5"
+    "typescript": "^3.2.4"
   }
 }
